--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "gulp": "^3.8.11",
     "gulp-autoprefixer": "^2.3.0",
     "gulp-html-replace": "^1.4.5",
+    "gulp-notify": "^2.2.0",
     "gulp-sass": "^2.0.1",
     "gulp-streamify": "0.0.5",
     "gulp-uglify": "^1.2.0",
+    "node-notifier": "^4.2.1",
     "react": "^0.13.3",
     "reactify": "^1.1.0",
     "vinyl-source-stream": "^1.1.0",
