--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "babelify": "^6.1.1",
     "browserify": "^10.1.0",
     "gulp": "^3.8.11",
     "gulp-autoprefixer": "^2.3.0",
