--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "gulp-notify": "^2.2.0",
     "gulp-sass": "^2.0.1",
     "gulp-streamify": "0.0.5",
-    "gulp-uglify": "^1.2.0",
+    "gulp-uglify": "1.1.0",
     "node-notifier": "^4.2.1",
     "react": "^0.13.3",
     "reactify": "^1.1.0",
