--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "gulp-html-replace": "^1.4.5",
     "gulp-notify": "^2.2.0",
     "gulp-sass": "^2.0.1",
+    "gulp-serve": "^1.0.0",
     "gulp-streamify": "0.0.5",
     "gulp-uglify": "1.1.0",
     "node-notifier": "^4.2.1",
